--- a/spring-first-app/src/main/resources/application.properties
+++ b/spring-first-app/src/main/resources/application.properties
@@ -1,1 +1,7 @@
+spring.datasource.url=jdbc:postgresql://localhost:55000/conference_app
+spring.datasource.username=root
+spring.datasource.password=postgrespw
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.show-sql=true
 
