--- a/spring-first-app/src/main/resources/application.properties
+++ b/spring-first-app/src/main/resources/application.properties
@@ -4,4 +4,4 @@ spring.datasource.password=postgrespw
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.hibernate.show-sql=true
-
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
