--- a/spring-first-app/src/main/resources/application.properties
+++ b/spring-first-app/src/main/resources/application.properties
@@ -1,10 +1,8 @@
-spring.datasource.url=jdbc:postgresql://localhost:55000/conference_app
-spring.datasource.username=postgres
-spring.datasource.password=postgrespw
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.hibernate.show-sql=true
-
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
-
-server.port=5000
+server.port=8080
